--- a/Plant Pathology 2020 - FGVC7/README
+++ b/Plant Pathology 2020 - FGVC7/README
@@ -1,1 +1,2 @@
-CNN model for this problem
+CNN model for the problem
+The address of the problem: https://www.kaggle.com/c/plant-pathology-2020-fgvc7/overview
